--- a/app/src/main/res/menu/menu_main_activity.xml
+++ b/app/src/main/res/menu/menu_main_activity.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?><!--
   ~   Copyright 2019 - 2023 Tyler Williamson
   ~
-  ~   This file is part of QuickWeather.
+  ~   This file is part of PureWeather.
   ~
-  ~   QuickWeather is free software: you can redistribute it and/or modify
+  ~   PureWeather is free software: you can redistribute it and/or modify
   ~   it under the terms of the GNU General Public License as published by
   ~   the Free Software Foundation, either version 3 of the License, or
   ~   (at your option) any later version.
   ~
-  ~   QuickWeather is distributed in the hope that it will be useful,
+  ~   PureWeather is distributed in the hope that it will be useful,
   ~   but WITHOUT ANY WARRANTY; without even the implied warranty of
   ~   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   ~   GNU General Public License for more details.
   ~
   ~   You should have received a copy of the GNU General Public License
-  ~   along with QuickWeather.  If not, see <https://www.gnu.org/licenses/>.
+  ~   along with PureWeather.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
@@ -34,7 +34,7 @@
                     android:checked="true"
                     android:icon="@drawable/ic_settings_white_24dp"
                     android:title="@string/text_settings" />
-                <item
+                <!-- <item
                     android:id="@+id/menu_check_for_updates"
                     android:checked="true"
                     android:icon="@drawable/ic_download_white_24dp"
@@ -43,12 +43,12 @@
                     android:id="@+id/menu_whats_new"
                     android:checked="true"
                     android:icon="@drawable/ic_star_white_24dp"
-                    android:title="@string/text_whats_new" />
+                    android:title="@string/text_whats_new" /> -->
                 <item
-                    android:id="@+id/menu_report_a_bug"
+                    android:id="@+id/menu_visit_project"
                     android:checked="true"
-                    android:icon="@drawable/ic_bug_report_white_24dp"
-                    android:title="@string/text_report_a_bug" />
+                    android:icon="@drawable/ic_outline_web_24dp"
+                    android:title="@string/text_visit_project" />
                 <item
                     android:id="@+id/menu_translation"
                     android:checked="true"
